# ccyy

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: ccyy.h
include/math/: Indices.h  math.h
include/math/algorithm/: OptimizeState.h  Solver.h  algorithm.h
include/math/algorithm/heuristic/: HeuristicSolver.h  SimulatedAnnealingSolver.h  heuristic.h
include/math/calc/: DistanceCalculator.h  calc.h
include/math/func/: MathFunction.h  func.h
include/math/geometry/: Coordinate.h  Coordinate3D.h  Coordinate3DSequence.h  CoordinateSequence.h  CoordinateSystem.h  geometry.h
include/test/: BaseTestObject.h  BaseTestObject.hpp  DerivedTestObject.h  DerivedTestObject.hpp  MemoryKiller.h  TestObject.hpp  test.h
include/type_helper/: type_helper.h
include/util/: CCYYException.h  Clock.h  IllegalArgumentException.h  Macro.h  util.h
include/wrapper/: Collection.h  NamedCollection.h  wrapper.h
src/: CMakeLists.txt
src/math/algorithm/: Solver.cc
src/math/algorithm/heuristic/: HeuristicSolver.cc  SimulatedAnnealingSolver.cc
src/math/geometry/: Coordinate.cc  Coordinate3D.cc  CoordinateSequence.cc
src/util/: Clock.cc
